@@ -20,309 +20,216 @@
 package net.william278.husksync.command;
 
 import net.william278.husksync.HuskSync;
-import net.william278.husksync.data.DataSaveCause;
-import net.william278.husksync.data.UserData;
-import net.william278.husksync.player.OnlineUser;
+import net.william278.husksync.data.DataSnapshot;
+import net.william278.husksync.user.CommandUser;
+import net.william278.husksync.user.User;
 import net.william278.husksync.util.DataDumper;
 import net.william278.husksync.util.DataSnapshotList;
+import net.william278.husksync.util.DataSnapshotOverview;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
-import java.io.IOException;
 import java.util.*;
-import java.util.concurrent.CompletableFuture;
 import java.util.logging.Level;
-import java.util.stream.Collectors;
 
-public class UserDataCommand extends CommandBase implements TabCompletable {
+public class UserDataCommand extends Command implements TabProvider {
 
-    private final String[] COMMAND_ARGUMENTS = {"view", "list", "delete", "restore", "pin", "dump"};
+    private static final Map<String, Boolean> SUB_COMMANDS = Map.of(
+            "view", false,
+            "list", false,
+            "delete", true,
+            "restore", true,
+            "pin", true,
+            "dump", true
+    );
 
-    public UserDataCommand(@NotNull HuskSync implementor) {
-        super("userdata", Permission.COMMAND_USER_DATA, implementor, "playerdata");
+    public UserDataCommand(@NotNull HuskSync plugin) {
+        super("userdata", List.of("playerdata"), String.format(
+                "<%s> [username] [version_uuid]", String.join("/", SUB_COMMANDS.keySet())
+        ), plugin);
+        setOperatorCommand(true);
+        addAdditionalPermissions(SUB_COMMANDS);
     }
 
     @Override
-    public void onExecute(@NotNull OnlineUser player, @NotNull String[] args) {
-        if (args.length < 1) {
-            plugin.getLocales().getLocale("error_invalid_syntax",
-                            "/userdata <view/list/delete/restore/pin/dump> <username> [version_uuid]")
-                    .ifPresent(player::sendMessage);
+    public void execute(@NotNull CommandUser executor, @NotNull String[] args) {
+        final String subCommand = parseStringArg(args, 0).orElse("view").toLowerCase(Locale.ENGLISH);
+        final Optional<User> optionalUser = parseStringArg(args, 1)
+                .flatMap(name -> plugin.getDatabase().getUserByName(name))
+                .or(() -> parseStringArg(args, 0).flatMap(name -> plugin.getDatabase().getUserByName(name)))
+                .or(() -> args.length < 2 && executor instanceof User userExecutor
+                        ? Optional.of(userExecutor) : Optional.empty());
+        final Optional<UUID> optionalUuid = parseUUIDArg(args, 2).or(() -> parseUUIDArg(args, 1));
+        if (optionalUser.isEmpty()) {
+            plugin.getLocales().getLocale("error_invalid_player")
+                    .ifPresent(executor::sendMessage);
             return;
         }
 
-        switch (args[0].toLowerCase(Locale.ENGLISH)) {
-            case "view" -> {
-                if (args.length < 2) {
-                    plugin.getLocales().getLocale("error_invalid_syntax",
-                                    "/userdata view <username> [version_uuid]")
-                            .ifPresent(player::sendMessage);
-                    return;
-                }
-                final String username = args[1];
-                if (args.length >= 3) {
-                    try {
-                        final UUID versionUuid = UUID.fromString(args[2]);
-                        CompletableFuture.runAsync(() -> plugin.getDatabase()
-                                .getUserByName(username.toLowerCase(Locale.ENGLISH))
-                                .thenAccept(optionalUser -> optionalUser
-                                        .ifPresentOrElse(user -> plugin.getDatabase().getUserData(user, versionUuid)
-                                                        .thenAccept(data -> data.ifPresentOrElse(
-                                                                userData -> userData.displayDataOverview(player, user, plugin.getLocales()),
-                                                                () -> plugin.getLocales().getLocale("error_invalid_version_uuid")
-                                                                        .ifPresent(player::sendMessage))),
-                                                () -> plugin.getLocales().getLocale("error_invalid_player")
-                                                        .ifPresent(player::sendMessage))));
-                    } catch (IllegalArgumentException e) {
-                        plugin.getLocales().getLocale("error_invalid_syntax",
-                                        "/userdata view <username> [version_uuid]")
-                                .ifPresent(player::sendMessage);
-                    }
-                } else {
-                    CompletableFuture.runAsync(() -> plugin.getDatabase()
-                            .getUserByName(username.toLowerCase(Locale.ENGLISH))
-                            .thenAccept(optionalUser -> optionalUser
-                                    .ifPresentOrElse(user -> plugin.getDatabase().getCurrentUserData(user)
-                                                    .thenAccept(latestData -> latestData.ifPresentOrElse(
-                                                            userData -> userData.displayDataOverview(player, user, plugin.getLocales()),
-                                                            () -> plugin.getLocales().getLocale("error_no_data_to_display")
-                                                                    .ifPresent(player::sendMessage))),
-                                            () -> plugin.getLocales().getLocale("error_invalid_player")
-                                                    .ifPresent(player::sendMessage))));
-                }
-            }
+        final User user = optionalUser.get();
+        switch (subCommand) {
+            case "view" -> optionalUuid.ifPresentOrElse(
+                    // Show the specified snapshot
+                    version -> plugin.getDatabase().getSnapshot(user, version).ifPresentOrElse(
+                            data -> DataSnapshotOverview.of(
+                                    data.unpack(plugin), data.getFileSize(plugin), user, plugin
+                            ).show(executor),
+                            () -> plugin.getLocales().getLocale("error_invalid_version_uuid")
+                                    .ifPresent(executor::sendMessage)),
+
+                    // Show the latest snapshot
+                    () -> plugin.getDatabase().getLatestSnapshot(user).ifPresentOrElse(
+                            data -> DataSnapshotOverview.of(
+                                    data.unpack(plugin), data.getFileSize(plugin), user, plugin
+                            ).show(executor),
+                            () -> plugin.getLocales().getLocale("error_no_data_to_display")
+                                    .ifPresent(executor::sendMessage))
+            );
+
             case "list" -> {
-                if (!player.hasPermission(Permission.COMMAND_USER_DATA_MANAGE.node)) {
-                    plugin.getLocales().getLocale("error_no_permission").ifPresent(player::sendMessage);
+                // Check if there is data to display
+                final List<DataSnapshot.Packed> dataList = plugin.getDatabase().getAllSnapshots(user);
+                if (dataList.isEmpty()) {
+                    plugin.getLocales().getLocale("error_no_data_to_display")
+                            .ifPresent(executor::sendMessage);
                     return;
                 }
-                if (args.length < 2) {
-                    plugin.getLocales().getLocale("error_invalid_syntax",
-                                    "/userdata list <username> [page]")
-                            .ifPresent(player::sendMessage);
-                    return;
-                }
-                final String username = args[1];
-                CompletableFuture.runAsync(() -> plugin.getDatabase()
-                        .getUserByName(username.toLowerCase(Locale.ENGLISH))
-                        .thenAccept(optionalUser -> optionalUser.ifPresentOrElse(
-                                user -> plugin.getDatabase().getUserData(user).thenAccept(dataList -> {
-                                    // Check if there is data to display
-                                    if (dataList.isEmpty()) {
-                                        plugin.getLocales().getLocale("error_no_data_to_display")
-                                                .ifPresent(player::sendMessage);
-                                        return;
-                                    }
 
-                                    // Determine page to display
-                                    int page = 1;
-                                    if (args.length >= 3) {
-                                        try {
-                                            page = Integer.parseInt(args[2]);
-                                        } catch (NumberFormatException e) {
-                                            plugin.getLocales().getLocale("error_invalid_syntax",
-                                                            "/userdata list <username> [page]")
-                                                    .ifPresent(player::sendMessage);
-                                            return;
-                                        }
-                                    }
-
-                                    // Show the list to the player
-                                    DataSnapshotList.create(dataList, user, plugin.getLocales())
-                                            .displayPage(player, page);
-                                }),
-                                () -> plugin.getLocales().getLocale("error_invalid_player")
-                                        .ifPresent(player::sendMessage))));
+                // Show the list to the player
+                DataSnapshotList.create(dataList, user, plugin).displayPage(
+                        executor,
+                        parseIntArg(args, 2).or(() -> parseIntArg(args, 1)).orElse(1)
+                );
             }
+
             case "delete" -> {
-                if (!player.hasPermission(Permission.COMMAND_USER_DATA_MANAGE.node)) {
-                    plugin.getLocales().getLocale("error_no_permission").ifPresent(player::sendMessage);
+                if (optionalUuid.isEmpty()) {
+                    plugin.getLocales().getLocale("error_invalid_syntax",
+                                    "/userdata delete <username> <version_uuid>")
+                            .ifPresent(executor::sendMessage);
                     return;
                 }
+
                 // Delete user data by specified UUID
-                if (args.length < 3) {
-                    plugin.getLocales().getLocale("error_invalid_syntax",
-                                    "/userdata delete <username> <version_uuid>")
-                            .ifPresent(player::sendMessage);
+                final UUID version = optionalUuid.get();
+                if (!plugin.getDatabase().deleteSnapshot(user, version)) {
+                    plugin.getLocales().getLocale("error_invalid_version_uuid")
+                            .ifPresent(executor::sendMessage);
                     return;
                 }
-                final String username = args[1];
-                try {
-                    final UUID versionUuid = UUID.fromString(args[2]);
-                    CompletableFuture.runAsync(() -> plugin.getDatabase()
-                            .getUserByName(username.toLowerCase(Locale.ENGLISH))
-                            .thenAccept(optionalUser -> optionalUser.ifPresentOrElse(
-                                    user -> plugin.getDatabase().deleteUserData(user, versionUuid).thenAccept(deleted -> {
-                                        if (deleted) {
-                                            plugin.getLocales().getLocale("data_deleted",
-                                                            versionUuid.toString().split("-")[0],
-                                                            versionUuid.toString(),
-                                                            user.username,
-                                                            user.uuid.toString())
-                                                    .ifPresent(player::sendMessage);
-                                        } else {
-                                            plugin.getLocales().getLocale("error_invalid_version_uuid")
-                                                    .ifPresent(player::sendMessage);
-                                        }
-                                    }),
-                                    () -> plugin.getLocales().getLocale("error_invalid_player")
-                                            .ifPresent(player::sendMessage))));
-                } catch (IllegalArgumentException e) {
-                    plugin.getLocales().getLocale("error_invalid_syntax",
-                                    "/userdata delete <username> <version_uuid>")
-                            .ifPresent(player::sendMessage);
-                }
+
+                plugin.getLocales().getLocale("data_deleted",
+                                version.toString().split("-")[0],
+                                version.toString(),
+                                user.getUsername(),
+                                user.getUuid().toString())
+                        .ifPresent(executor::sendMessage);
             }
+
             case "restore" -> {
-                if (!player.hasPermission(Permission.COMMAND_USER_DATA_MANAGE.node)) {
-                    plugin.getLocales().getLocale("error_no_permission").ifPresent(player::sendMessage);
-                    return;
-                }
-                // Get user data by specified uuid and username
-                if (args.length < 3) {
+                if (optionalUuid.isEmpty()) {
                     plugin.getLocales().getLocale("error_invalid_syntax",
                                     "/userdata restore <username> <version_uuid>")
-                            .ifPresent(player::sendMessage);
+                            .ifPresent(executor::sendMessage);
                     return;
                 }
-                final String username = args[1];
-                try {
-                    final UUID versionUuid = UUID.fromString(args[2]);
-                    CompletableFuture.runAsync(() -> plugin.getDatabase()
-                            .getUserByName(username.toLowerCase(Locale.ENGLISH))
-                            .thenAccept(optionalUser -> optionalUser.ifPresentOrElse(
-                                    user -> plugin.getDatabase().getUserData(user, versionUuid).thenAccept(data -> {
-                                        if (data.isEmpty()) {
-                                            plugin.getLocales().getLocale("error_invalid_version_uuid")
-                                                    .ifPresent(player::sendMessage);
-                                            return;
-                                        }
 
-                                        // Restore users with a minimum of one health (prevent restoring players with <=0 health)
-                                        final UserData userData = data.get().userData();
-                                        userData.getStatus().ifPresent(status -> status.health = Math.max(1, status.health));
-
-                                        // Set the users data and send a message
-                                        plugin.getDatabase().setUserData(user, userData, DataSaveCause.BACKUP_RESTORE);
-                                        plugin.getRedisManager().sendUserDataUpdate(user, data.get().userData()).join();
-                                        plugin.getLocales().getLocale("data_restored",
-                                                        user.username,
-                                                        user.uuid.toString(),
-                                                        versionUuid.toString().split("-")[0],
-                                                        versionUuid.toString())
-                                                .ifPresent(player::sendMessage);
-                                    }),
-                                    () -> plugin.getLocales().getLocale("error_invalid_player")
-                                            .ifPresent(player::sendMessage))));
-                } catch (IllegalArgumentException e) {
-                    plugin.getLocales().getLocale("error_invalid_syntax",
-                                    "/userdata restore <username> <version_uuid>")
-                            .ifPresent(player::sendMessage);
+                // Restore user data by specified UUID
+                final Optional<DataSnapshot.Packed> optionalData = plugin.getDatabase().getSnapshot(user, optionalUuid.get());
+                if (optionalData.isEmpty()) {
+                    plugin.getLocales().getLocale("error_invalid_version_uuid")
+                            .ifPresent(executor::sendMessage);
+                    return;
                 }
+
+                // Restore users with a minimum of one health (prevent restoring players with <=0 health)
+                final DataSnapshot.Packed data = optionalData.get().copy();
+                data.edit(plugin, (unpacked -> {
+                    unpacked.getHealth().ifPresent(status -> status.setHealth(Math.max(1, status.getHealth())));
+                    unpacked.setSaveCause(DataSnapshot.SaveCause.BACKUP_RESTORE);
+                    unpacked.setPinned(plugin.getSettings().doAutoPin(DataSnapshot.SaveCause.BACKUP_RESTORE));
+                }));
+
+                // Set the user's data and send a message
+                plugin.getDatabase().addSnapshot(user, data);
+                plugin.getRedisManager().sendUserDataUpdate(user, data);
+                plugin.getLocales().getLocale("data_restored", user.getUsername(), user.getUuid().toString(),
+                        data.getShortId(), data.getId().toString()).ifPresent(executor::sendMessage);
             }
+
             case "pin" -> {
-                if (!player.hasPermission(Permission.COMMAND_USER_DATA_MANAGE.node)) {
-                    plugin.getLocales().getLocale("error_no_permission").ifPresent(player::sendMessage);
-                    return;
-                }
-                if (args.length < 3) {
+                if (optionalUuid.isEmpty()) {
                     plugin.getLocales().getLocale("error_invalid_syntax",
                                     "/userdata pin <username> <version_uuid>")
-                            .ifPresent(player::sendMessage);
+                            .ifPresent(executor::sendMessage);
                     return;
                 }
 
-                final String username = args[1];
-                try {
-                    final UUID versionUuid = UUID.fromString(args[2]);
-                    CompletableFuture.runAsync(() -> plugin.getDatabase()
-                            .getUserByName(username.toLowerCase(Locale.ENGLISH))
-                            .thenAccept(optionalUser -> optionalUser.ifPresentOrElse(
-                                    user -> plugin.getDatabase().getUserData(user, versionUuid).thenAccept(
-                                            optionalUserData -> optionalUserData.ifPresentOrElse(userData -> {
-                                                if (userData.pinned()) {
-                                                    plugin.getDatabase().unpinUserData(user, versionUuid).join();
-                                                    plugin.getLocales().getLocale("data_unpinned",
-                                                                    versionUuid.toString().split("-")[0],
-                                                                    versionUuid.toString(),
-                                                                    user.username,
-                                                                    user.uuid.toString())
-                                                            .ifPresent(player::sendMessage);
-                                                } else {
-                                                    plugin.getDatabase().pinUserData(user, versionUuid).join();
-                                                    plugin.getLocales().getLocale("data_pinned",
-                                                                    versionUuid.toString().split("-")[0],
-                                                                    versionUuid.toString(),
-                                                                    user.username,
-                                                                    user.uuid.toString())
-                                                            .ifPresent(player::sendMessage);
-                                                }
-                                            }, () -> plugin.getLocales().getLocale("error_invalid_version_uuid")
-                                                    .ifPresent(player::sendMessage))),
-                                    () -> plugin.getLocales().getLocale("error_invalid_player")
-                                            .ifPresent(player::sendMessage))));
-                } catch (IllegalArgumentException e) {
-                    plugin.getLocales().getLocale("error_invalid_syntax",
-                                    "/userdata pin <username> <version_uuid>")
-                            .ifPresent(player::sendMessage);
+                // Check that the data exists
+                final Optional<DataSnapshot.Packed> optionalData = plugin.getDatabase().getSnapshot(user, optionalUuid.get());
+                if (optionalData.isEmpty()) {
+                    plugin.getLocales().getLocale("error_invalid_version_uuid")
+                            .ifPresent(executor::sendMessage);
+                    return;
                 }
+
+                // Pin or unpin the data
+                final DataSnapshot.Packed data = optionalData.get();
+                if (data.isPinned()) {
+                    plugin.getDatabase().unpinSnapshot(user, data.getId());
+                } else {
+                    plugin.getDatabase().pinSnapshot(user, data.getId());
+                }
+                plugin.getLocales().getLocale(data.isPinned() ? "data_unpinned" : "data_pinned", data.getShortId(),
+                                data.getId().toString(), user.getUsername(), user.getUuid().toString())
+                        .ifPresent(executor::sendMessage);
             }
+
             case "dump" -> {
-                if (!player.hasPermission(Permission.COMMAND_USER_DATA_DUMP.node)) {
-                    plugin.getLocales().getLocale("error_no_permission").ifPresent(player::sendMessage);
-                    return;
-                }
-                if (args.length < 3) {
+                if (optionalUuid.isEmpty()) {
                     plugin.getLocales().getLocale("error_invalid_syntax",
                                     "/userdata dump <username> <version_uuid>")
-                            .ifPresent(player::sendMessage);
+                            .ifPresent(executor::sendMessage);
                     return;
                 }
 
-                final boolean toWeb = args.length > 3 && args[3].equalsIgnoreCase("web");
-                final String username = args[1];
+                // Determine dump type
+                final boolean webDump = parseStringArg(args, 3)
+                        .map(arg -> arg.equalsIgnoreCase("web"))
+                        .orElse(false);
+                final Optional<DataSnapshot.Packed> data = plugin.getDatabase().getSnapshot(user, optionalUuid.get());
+                if (data.isEmpty()) {
+                    plugin.getLocales().getLocale("error_invalid_version_uuid")
+                            .ifPresent(executor::sendMessage);
+                    return;
+                }
+
+                // Dump the data
+                final DataSnapshot.Packed userData = data.get();
+                final DataDumper dumper = DataDumper.create(userData, user, plugin);
                 try {
-                    final UUID versionUuid = UUID.fromString(args[2]);
-                    CompletableFuture.runAsync(() -> plugin.getDatabase()
-                            .getUserByName(username.toLowerCase(Locale.ENGLISH))
-                            .thenAccept(optionalUser -> optionalUser.ifPresentOrElse(
-                                    user -> plugin.getDatabase().getUserData(user, versionUuid).thenAccept(
-                                            optionalUserData -> optionalUserData.ifPresentOrElse(userData -> {
-                                                try {
-                                                    final DataDumper dumper = DataDumper.create(userData, user, plugin);
-                                                    final String result = toWeb ? dumper.toWeb() : dumper.toFile();
-                                                    plugin.getLocales().getLocale("data_dumped", versionUuid.toString()
-                                                                    .split("-")[0], user.username, result)
-                                                            .ifPresent(player::sendMessage);
-                                                } catch (IOException e) {
-                                                    plugin.log(Level.SEVERE, "Failed to dump user data", e);
-                                                }
-                                            }, () -> plugin.getLocales().getLocale("error_invalid_version_uuid")
-                                                    .ifPresent(player::sendMessage))),
-                                    () -> plugin.getLocales().getLocale("error_invalid_player")
-                                            .ifPresent(player::sendMessage))));
-                } catch (IllegalArgumentException e) {
-                    plugin.getLocales().getLocale("error_invalid_syntax",
-                                    "/userdata dump <username> <version_uuid>")
-                            .ifPresent(player::sendMessage);
+                    plugin.getLocales().getLocale("data_dumped", userData.getShortId(), user.getUsername(),
+                            (webDump ? dumper.toWeb() : dumper.toFile())).ifPresent(executor::sendMessage);
+                } catch (Throwable e) {
+                    plugin.log(Level.SEVERE, "Failed to dump user data", e);
                 }
             }
+
+            default -> plugin.getLocales().getLocale("error_invalid_syntax", getUsage())
+                    .ifPresent(executor::sendMessage);
         }
     }
 
+    @Nullable
     @Override
-    public List<String> onTabComplete(@NotNull String[] args) {
-        switch (args.length) {
-            case 0, 1 -> {
-                return Arrays.stream(COMMAND_ARGUMENTS)
-                        .filter(argument -> argument.startsWith(args.length == 1 ? args[0] : ""))
-                        .sorted().collect(Collectors.toList());
-            }
-            case 2 -> {
-                return plugin.getOnlineUsers().stream().map(user -> user.username)
-                        .filter(argument -> argument.startsWith(args[1]))
-                        .sorted().collect(Collectors.toList());
-            }
-        }
-        return Collections.emptyList();
+    public List<String> suggest(@NotNull CommandUser executor, @NotNull String[] args) {
+        return switch (args.length) {
+            case 0, 1 -> SUB_COMMANDS.keySet().stream().sorted().toList();
+            case 2 -> plugin.getOnlineUsers().stream().map(User::getUsername).toList();
+            case 4 -> parseStringArg(args, 0)
+                    .map(arg -> arg.equalsIgnoreCase("dump") ? List.of("web", "file") : null)
+                    .orElse(null);
+            default -> null;
+        };
     }
 }
